--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "react-speech-kit": "^3.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.0",
     "@types/react": "19.1.2",
+    "@types/uuid": "^10.0.0",
     "favicons": "^7.2.0",
     "rimraf": "^6.0.1",
     "svg2img": "^1.0.0-beta.2",
